replace sqlite3 with better-sqlite3

--- a/package.json
+++ b/package.json
@@ -91,16 +91,20 @@
 		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.11.0",
 		"@mui/x-data-grid": "^5.17.14",
+		"child_process": "^1.0.2",
 		"electron-debug": "^3.2.0",
 		"electron-log": "^4.4.8",
 		"electron-updater": "^5.2.3",
 		"fs": "^0.0.1-security",
+		"javascript-natural-sort": "^0.7.1",
 		"mssql": "^9.0.1",
 		"node-cron": "^3.0.2",
 		"notistack": "^2.0.8",
+		"path-browserify": "^1.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.5",
+		"request": "^2.88.2",
 		"xml-js": "^1.6.11"
 	},
 	"devDependencies": {
@@ -113,6 +117,7 @@
 		"@types/jest": "^28.1.7",
 		"@types/node": "18.7.6",
 		"@types/node-cron": "^3.0.6",
+		"@types/path-browserify": "^1.0.0",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@types/react-test-renderer": "^18.0.0",
