--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
 		"electron-log": "^4.4.8",
 		"electron-updater": "^5.2.3",
 		"fs": "^0.0.1-security",
+		"fs-extra": "^11.1.0",
 		"javascript-natural-sort": "^0.7.1",
 		"mssql": "^9.0.1",
 		"node-cron": "^3.0.2",
@@ -121,6 +122,7 @@
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@types/react-test-renderer": "^18.0.0",
+		"@types/request": "^2.48.8",
 		"@types/terser-webpack-plugin": "^5.0.4",
 		"@types/webpack-bundle-analyzer": "^4.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.33.1",
@@ -180,7 +182,7 @@
 	},
 	"build": {
 		"productName": "Acumatica Dev Tools",
-		"artifactName": "Acumatica.Dev.Tools",
+		"artifactName": "Acumatica.Dev.Tools-${version}.${ext}",
 		"appId": "tech.trowbridge.acumatica-dev-tools",
 		"asar": true,
 		"asarUnpack": "**\\*.{node,dll}",
