--- a/package.json
+++ b/package.json
@@ -98,15 +98,18 @@
 		"fs": "^0.0.1-security",
 		"fs-extra": "^11.1.0",
 		"javascript-natural-sort": "^0.7.1",
-		"mssql": "^9.0.1",
+		"mssql": "^7.2.0",
+		"node-abi": "^3.30.0",
 		"node-cron": "^3.0.2",
 		"notistack": "^2.0.8",
 		"path-browserify": "^1.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.5",
+		"regedit": "^5.1.1",
 		"request": "^2.88.2",
-		"xml-js": "^1.6.11"
+		"xml-js": "^1.6.11",
+		"xml2js": "^0.4.23"
 	},
 	"devDependencies": {
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -125,6 +128,7 @@
 		"@types/request": "^2.48.8",
 		"@types/terser-webpack-plugin": "^5.0.4",
 		"@types/webpack-bundle-analyzer": "^4.4.2",
+		"@types/xml2js": "^0.4.11",
 		"@typescript-eslint/eslint-plugin": "^5.33.1",
 		"@typescript-eslint/parser": "^5.33.1",
 		"browserslist-config-erb": "^0.0.3",
@@ -135,8 +139,8 @@
 		"css-loader": "^6.7.1",
 		"css-minimizer-webpack-plugin": "^4.0.0",
 		"detect-port": "^1.3.0",
-		"electron": "^20.0.2",
-		"electron-builder": "^23.3.3",
+		"electron": "^22.0.0",
+		"electron-builder": "^22.10.3",
 		"electron-devtools-installer": "^3.2.0",
 		"electron-notarize": "^1.2.1",
 		"electron-rebuild": "^3.2.9",
@@ -181,9 +185,8 @@
 		"webpack-merge": "^5.8.0"
 	},
 	"build": {
-		"productName": "Acumatica Dev Tools",
-		"artifactName": "Acumatica.Dev.Tools-${version}.${ext}",
-		"appId": "tech.trowbridge.acumatica-dev-tools",
+		"productName": "Acumatica-Dev-Tools",
+		"artifactName": "Acumatica-Dev-Tools.${version}.${ext}",
 		"asar": true,
 		"asarUnpack": "**\\*.{node,dll}",
 		"files": [
@@ -193,9 +196,15 @@
 		],
 		"afterSign": ".erb/scripts/notarize.js",
 		"win": {
+			"publisherName": "EvanTrow",
 			"target": [
 				"nsis"
 			]
+		},
+		"nsis": {
+			"shortcutName": "Acumatica Dev Tools",
+			"createDesktopShortcut": false,
+			"uninstallDisplayName": "Acumatica Dev Tools ${version}"
 		},
 		"directories": {
 			"app": "release/app",
