--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "acuamtica-dev-tools",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"description": "Acumatica ERP Development Tools",
-	"license": "MIT",
+	"license": "Apache",
 	"author": {
 		"name": "Evan Trowbridge",
 		"email": "evan@trowbridge.tech",
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"@types/mssql": "^8.1.1",
-		"better-sqlite3": "^8.0.1"
+		"better-sqlite3": "^8.0.1",
+		"regedit": "^5.1.1"
 	}
 }
