--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.11.0",
 		"@mui/x-data-grid": "^5.17.14",
+		"@tremor/react": "^1.4.0",
 		"child_process": "^1.0.2",
 		"electron-debug": "^3.2.0",
 		"electron-log": "^4.4.8",
